# Silvestr2

./: CMakeCache.txt  CMakeLists.txt  build.ninja  cart.sln  cmake_install.cmake  main.cpp  rules.ninja
.github/workflows/: ccpp.yml
TestDLLPlus/: CMakeLists.txt  TestDLLPlus.cpp  TestDLLPlus.h  TestDLLPlus.vcxproj  TestDLLPlus.vcxproj.filters  cmake_install.cmake  cpp.hint  dllmain.cpp
cart/: cart.cpp  cart.vcxproj  cart.vcxproj.filters
